<resources>
    <string name="app_name">MWEngineTest5</string>

    <string name="app_help">Test application. For testing changes when setting new sample
    </string>


    <string name="sample">Sample selection</string>
    <string name="play_btn">Play</string>
    <string name="pause_btn">Pause</string>


    <string name="slider_volume">Output volume</string>
    <string name="reverb_switch">Reverb switch</string>
    <string name="metro_switch">Metro switch</string>
    <string name="autometro_switch">AutoMetro Switch</string>
    <string name="metronome_speed">Metronome speed</string>


    <string-array name="drivers">
        <item>Bach</item>
        <item>Bonjour</item>
    </string-array>
</resources>